# ChangeLog for app-arch/dpkg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.113 2009/12/23 00:16:18 jer Exp $

*dpkg-1.15.5.5 (23 Dec 2009)

  23 Dec 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.5.5.ebuild:
  Version bump.

*dpkg-1.15.5.4 (08 Dec 2009)

  08 Dec 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.5.4.ebuild:
  Version bump.

  02 Dec 2009; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.2.ebuild,
  dpkg-1.15.3.ebuild, dpkg-1.15.3.1.ebuild, dpkg-1.15.4.ebuild,
  dpkg-1.15.4.1.ebuild, dpkg-1.15.5.2.ebuild, dpkg-1.15.5.2-r1.ebuild,
  dpkg-1.15.5.3.ebuild:
  Use PN instead of package name in SRC_URI.

*dpkg-1.15.5.3 (27 Nov 2009)

  27 Nov 2009; Yuri Vasilevski <yvasilev@gentoo.org> +dpkg-1.15.5.3.ebuild:
  Version bump to 1.15.5.3

*dpkg-1.15.5.2-r1 (25 Nov 2009)

  25 Nov 2009; Yuri Vasilevski <yvasilev@gentoo.org>
  +dpkg-1.15.5.2-r1.ebuild, +files/dpkg-1.15.5-nls.patch,
  +files/dpkg-1.15.5-unicode.patch:
  Replaced useless dpkg-1.15.1-nls patch with one that allows to select
  specific LINGUAS and fixed unicode flag support (previously was building
  with wide headers and linking with normal ncurces lib when USE=-unicode).
  Thanks to guillem@d.o for pointing some of this problems.

  18 Nov 2009; Yuri Vasilevski <yvasilev@gentoo.org> -dpkg-1.15.5.1.ebuild:
  Removed broken (due to lack of perl 5.10) version.

*dpkg-1.15.5.2 (18 Nov 2009)

  18 Nov 2009; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.5.2.ebuild:
  Version bump (fixes bug 293516).

*dpkg-1.15.5.1 (17 Nov 2009)

  17 Nov 2009; Yuri Vasilevski <yvasilev@gentoo.org> -dpkg-1.15.5.ebuild,
  +dpkg-1.15.5.1.ebuild:
  Replaced 1.15.5 with fixed 1.15.5.1
  (http://packages.qa.debian.org/d/dpkg/news/20091117T161805Z.html) version.

  17 Nov 2009; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.5.ebuild:
  Do not attempt to rm install-info man page (it is gone and soon the