@@ -9,6 +9,7 @@ DIST dpkg_1.15.4.tar.gz 7036109 RMD160 17affb0a33e98069029894bb13180be1af98d38f 
 DIST dpkg_1.15.5.2.tar.bz2 4630988 RMD160 19addfcc4a5b350af7af6ba7035392e5f22c3446 SHA1 008d70d028de844ca9c1170b8e1336484a424a2f SHA256 8e6f33e7ac24c66559972cee2b66af89fba2542ac99195cdf94ff10d16328057
 DIST dpkg_1.15.5.3.tar.bz2 4665799 RMD160 dda461bba65959847f748fbfe012f565261f376a SHA1 8cd0d8e9457ed60c2b4480b81bf7d9614790682f SHA256 90be82bbe0aaf30cc7d58ddce077b7ad14dd40e2fc7691814aaaee544a42646b
 DIST dpkg_1.15.5.5.tar.bz2 4682843 RMD160 121751ffffe2780ff104db9c1174320330669e4c SHA1 ca6dcc374f62dc03fa795be4337d2c416016cfd8 SHA256 9929db9c3615df97630e3c2c381209ba77c88b2f2b47b1fcb2933f07e2202a07
+DIST dpkg_1.15.5.6.tar.bz2 4642507 RMD160 dccb8d81f41688486303c5d9de147898b9cf1c8e SHA1 340af57cc79ffe17068d3a483ad97a57d27016b9 SHA256 f3e526deff4c9e0fad53a283add6a6f553d59c62274c1fd02cbb240090114d9b
 EBUILD dpkg-1.15.2.ebuild 1630 RMD160 8593ab2225084b1e12289a146269c8ebb87976e9 SHA1 fe42081c251710f2dbd5a18cf34cce8e4e532dda SHA256 2ef069780c6977c0ec53c68862317bc921354f4b28b1cda16e40e4665e8656e7
 EBUILD dpkg-1.15.3.1.ebuild 1631 RMD160 cee835a3188b2b2c6ddc4a7024a487fbd58799b6 SHA1 4819676af542b9e2baec2fbfe790fb3b90407bb1 SHA256 4a48f8e67db11e4a0d74ed909bb5a6a6c50f93072fdc4a7445ccee2affe184fa
 EBUILD dpkg-1.15.3.ebuild 1629 RMD160 ae9286f132b2e28172212459b345c6ede362b57a SHA1 f8577aef0db8de477c7df7d68d866927e9bce5a8 SHA256 c8a60b848343e22413a20745667941b48140527abdcd6dfcd0e12eef01acad6e
@@ -18,5 +19,6 @@ EBUILD dpkg-1.15.5.2-r1.ebuild 1792 RMD160 ebb723341a847daace7afd0ec6bfc8a38442c
 EBUILD dpkg-1.15.5.2.ebuild 1641 RMD160 af0acf98d1d79d190c01cb8669638ef996112d9d SHA1 6e086b68c6388614380b173f291cd77726919b38 SHA256 c8534c62cc3353e6d57f2c32cc780417030ca0392299ffb74ed631f362ccf271
 EBUILD dpkg-1.15.5.3.ebuild 1789 RMD160 47615a6feff64ed60930e396f70b7105bbe6eb74 SHA1 f308688fdfee8ad78a0fda23d1efe4c1a2674e5e SHA256 e4aae16d52429af5e68a15e99b15a4b108ffc7c9db6148128c39d8453791ab7f
 EBUILD dpkg-1.15.5.5.ebuild 1867 RMD160 59e31e755d24af702b10447c16e7f95b85ec5eae SHA1 a509bb2cc175f41d9c6514d35af3b435c330c0b8 SHA256 c64bc0c2a3d48527257b7137bcfec1c5eaa6525e5b96cfe49917ffa07ff0256b
-MISC ChangeLog 15278 RMD160 abfeb85fb948723a6639f1f6c8ea182374505f40 SHA1 fdd7232e432740b3dfa955b2e25c906e0a229d58 SHA256 7949ed82c74b2ccb8bdb88d35f4cf2067494d0f379a3d0b04fe88dce7bc6801f
+EBUILD dpkg-1.15.5.6.ebuild 1867 RMD160 37aa8374795f6300757ea30d292c14b2b0ec8392 SHA1 bcd9a26b39b958debe66375631c2ca677192a671 SHA256 98ddd28a630119803198cff2a18c8f1b4d15e45a17ec89ce876bfd8153766d58
+MISC ChangeLog 15395 RMD160 fe576f22313664a5e4b0e60fc0fbb6474e04effd SHA1 c854171a993ed6ad1ade6f85ba4aaf7a080bb021 SHA256 184812728eed125992b395bad81349187a87322cb7fbc13d7d8eb5f4c2fb3176
 MISC metadata.xml 162 RMD160 ebe445a93e16f05a392ebdf3882b56b92931e37e SHA1 8bc26eb7c98535f3e31d2288f25fba83838857e5 SHA256 316a32c1e8ee9f6548707abec9a803d0a19feea1be10a19273cc04e0cd357644
