@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/dpkg
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.113 2009/12/23 00:16:18 jer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.114 2010/01/09 15:58:19 jer Exp $
+
+*dpkg-1.15.5.6 (09 Jan 2010)
+
+  09 Jan 2010; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.5.6.ebuild:
+  Version bump.
 
 *dpkg-1.15.5.5 (23 Dec 2009)
 
